[gd_scene load_steps=12 format=3 uid="uid://c7o3k0ijtqjno"]

[ext_resource type="Script" path="res://CutVisHan.gd" id="1_gtocr"]
[ext_resource type="Texture2D" uid="uid://13wrdtxf56jj" path="res://Art/Placeholder/BlackBG_PLACEHOLDER.png" id="2_2wh1r"]
[ext_resource type="Texture2D" uid="uid://bwayhmxf2r5hf" path="res://Art/Placeholder/Overworld_Dialoguebox_PLACEHOLDER.png" id="3_el7a2"]
[ext_resource type="Texture2D" uid="uid://s5awu5pckcmo" path="res://Art/Placeholder/Dialogue_CordeliaNameplate_PLACEHOLDER.png" id="4_5drya"]
[ext_resource type="Texture2D" uid="uid://1eu31fbjbptw" path="res://Art/Placeholder/Overworld_Player_Down_PLACEHOLDER.png" id="4_8856s"]
[ext_resource type="Texture2D" uid="uid://b0qwi858iipf8" path="res://Art/Placeholder/Dialogue_MackenzieNameplate_PLACEHOLDER.png" id="5_s7c2e"]
[ext_resource type="Texture2D" uid="uid://b31b1sx1b16xd" path="res://Art/Placeholder/Dialogue_AmieXNameplate_PLACEHOLDER.png" id="6_66no1"]
[ext_resource type="Texture2D" uid="uid://bg4v1rfasnv8e" path="res://Art/Placeholder/Dialogue_CurieNameplate_PLACEHOLDER.png" id="7_rqd0b"]
[ext_resource type="Texture2D" uid="uid://b8unqewu8rbxo" path="res://Art/Placeholder/Dialogue_Cordelia_PLACHOLDER.png" id="8_l51ge"]
[ext_resource type="Texture2D" uid="uid://dwliirphne0rx" path="res://Art/Placeholder/Dialogue_Mackenzie_PLACEHOLDER.png" id="9_m12re"]
[ext_resource type="Texture2D" uid="uid://bbfdekhuid23f" path="res://Art/Placeholder/Arrow_Encounter_PLACEHOLDER.png" id="11_ae75j"]

[node name="CutVisHan" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_gtocr")

[node name="DialogBG" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_2wh1r")

[node name="TextBacking" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 160.0
offset_top = 600.0
offset_right = 1760.0
offset_bottom = 1000.0
texture = ExtResource("3_el7a2")

[node name="Nameplate0" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 172.0
offset_top = 615.0
offset_right = 696.0
offset_bottom = 706.0
scale = Vector2(0.75, 0.75)
texture = ExtResource("4_5drya")

[node name="Nameplate1" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 1354.0
offset_top = 617.0
offset_right = 1878.0
offset_bottom = 708.0
scale = Vector2(0.75, 0.75)
texture = ExtResource("5_s7c2e")

[node name="Nameplate2" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 1354.0
offset_top = 614.0
offset_right = 1878.0
offset_bottom = 705.0
scale = Vector2(0.75, 0.75)
texture = ExtResource("6_66no1")

[node name="Nameplate3" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 1356.0
offset_top = 614.0
offset_right = 1880.0
offset_bottom = 705.0
scale = Vector2(0.75, 0.75)
texture = ExtResource("7_rqd0b")

[node name="DialogTextBox" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 210.0
offset_top = 680.0
offset_right = 1710.0
offset_bottom = 980.0
text = "asdf"

[node name="Sprite0" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 155.0
offset_top = 7.0
offset_right = 792.0
offset_bottom = 573.0
texture = ExtResource("8_l51ge")

[node name="Sprite1" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 1118.0
offset_top = 11.0
offset_right = 1755.0
offset_bottom = 571.0
texture = ExtResource("9_m12re")

[node name="Sprite2" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 1142.0
offset_top = 187.0
offset_right = 1345.0
offset_bottom = 575.0
texture = ExtResource("4_8856s")

[node name="Sprite3" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 1339.0
offset_top = 53.0
offset_right = 1616.0
offset_bottom = 578.0
texture = ExtResource("4_8856s")

[node name="ContinueB" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 1691.0
offset_top = 960.0
offset_right = 1891.0
offset_bottom = 1060.0
texture_normal = ExtResource("11_ae75j")
flip_h = true

[connection signal="pressed" from="ContinueB" to="." method="_on_continue_b_pressed"]
